--- a/ProjetoStrata/CSS/estilo.css
+++ b/ProjetoStrata/CSS/estilo.css
@@ -90,6 +90,12 @@ pre code {
     display: block;
 }
 
+.gallery-thumb img{
+margin-bottom: 2%;
+display: inline-block;
+border-radius: 5px;
+}
+
 /*grid*/
 .row{
     overflow: auto;
@@ -109,16 +115,30 @@ margin-left: 1%;
 }
 
 .col2-3{
-width: 65%;
+width: 66%;
 float: left;
-}
+}/*2-3 significa que uma div está ocupando 2 colunas de 3, sobra 1 coluna que está sendo ocupada por outra div*/
 
 .col1-3{
     width: 32%;
     float: left;
-    margin-left: 3%;
 
-}
+} /*1-3 significa que uma div está ocupando 1 colunas de 3, sobram 2 colunas ocupadas por outras 2 divs*/
+
+.col1-3:nth-child(3n - 2)/*aplicar nas imagens 1,4,7*/{
+    margin-right: 2%;
+}/*imagens*/
+.col1-3:nth-child(3n)/*aplicar nas imagens 3,6,9*/{
+    margin-left: 2%;
+}/*imagens*/
+
+.col2-3 + .col1-3{
+    margin-left: 2%;
+}/*selecionar elemento col 1-3 que vem imediatamente após 2-3, uma coluna ocupa 66%, outra ocupa 32%*/
+
+.col1-3 + .col2-3{
+    margin-left: 2%;
+}/*selecionar elemento col 2-3 que vem imediatamente após 1-3, cada div ocupa 32%*/
 
 /**/
 
@@ -294,6 +314,7 @@ background: #eee;
     padding: 80px 54px 60px 54px;
     box-sizing: border-box;/*para padding não somar o tamanho do elemento; fixar conteúdo*/
 }
+
 
 .main-footer {
     
